manifest/jupyter.yaml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: jupyterlab
  labels:
    app: jupyterlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyterlab
  template:
    metadata:
      labels:
        app: jupyterlab
    spec:
      hostname: jupyter
      # must match headless service name
      subdomain: domain
      setHostnameAsFQDN: true
      containers:
      - name: jupyter
        image: jupyterlab:3.4.8-spark-3.3.0
        imagePullPolicy: IfNotPresent
        # command: [ "/bin/bash", "-c", "--" ]
        # args: [ "while true; do sleep 30; done;" ]
        ports:
        - containerPort: 8888
        volumeMounts:
        - name: hdfs
          mountPath: /opt/workspace
        - name: event-log
          mountPath: /opt/log          
        resources: {} 
      volumes:
      - name: hdfs
        persistentVolumeClaim:
          claimName: hdfs
      - name: event-log
        persistentVolumeClaim:
          claimName: event-log              
---
# svc
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: jupyterlab
spec:
  selector:
    app: jupyterlab
  ports:
  - port: 8888
    targetPort: 8888
---
# headless svc, used with pod hostname to resolve pod ip from pod FQDN
# https://kubernetes.io/docs/concepts/services-networking/dns-pod-service/#pod-s-hostname-and-subdomain-fields
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: domain
spec:
  selector:
    app: jupyterlab
  clusterIP: None
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterlab
  labels:
    name: jupyterlab
spec:
  rules:
  - host: jupyter.127-0-0-1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jupyterlab
            port: 
              number: 8888
